--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<p>Student ID: u1810127</p>
 	<p>Group number: 001</p>
 	<p>University e-mail: inha@mail.uz</p>
-		<img src="DSC_0260.JPG"width="300px"height="400px">
+		<img src="DSC_0260.jpg"width="300px"height="400px">
 		<h2>My interests and hobbies</h2>
 
 <p>
