--- a/movies.html
+++ b/movies.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>List of movies</h1>
 	<h2> Creed 2 </h2>
-	<a href="https://www.rottentomatoes.com/m/creed_ii"><img src="Creed2.jpg" width="500" height="400"></a> 
+	<a href="https://www.rottentomatoes.com/m/creed_ii"><img src="creed2.jpg" width="500" height="400"></a> 
 	<p> Name of the film :<strong style="color:purple;"> CREED2</strong> </p>
 	<p> Release date :<strong style="color:purple;"> Nov 21,2018 Wide</strong></p>
 	<p> Genre :<strong style="color:purple;"> Action & adventure,Drama,Sports & Fitness</strong></p>
